--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="flex flex-row space-x-10 pr-24 mb-10 h-12 absolute bottom-0 right-0">
+<div class="flex flex-row space-x-10 pr-12 sm:pr-24 mb-6 sm:mb-10 h-8 sm:h-12 absolute bottom-0 right-0">
   <img
     src="assets/images/instagram 1.png"
     alt="insta"
