--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -13,18 +13,22 @@
     <span class="text-5xl text-black bold pr-6 pl-8">{{bar.name}}</span> 
     <span class="text-4xl text-black"> {{zone.name}}</span>
 
-    <div class="flex flex-wrap lg:flex-no-wrap md:flex-no-wrap sm:flex-wrap xs pt-16">
+    <div class="sm:hidden">
+      <img class="w-full h-full rounded flex-initial" src="{{bar.main_image}}" alt="main_image_bar">
+    </div>
+
+    <div id="ladilla" class="sm:grid sm:grid-cols-2 sm:gap-4 md:flex md:flex-wrap lg:flex-no-wrap md:flex-no-wrap md:xs md:pt-16">
       <div
       *ngFor="let x of images"
-      class="w-1/3 px-2 overflow-hidden my-2"
+      class="md:w-1/3 md:px-2 overflow-hidden my-2"
       >
-      <img
-        class="w-full h-full rounded flex-initial"
-        src="{{ x }}"
-        alt="Sunset in the mountains"
-      />
+        <img
+          class="w-full h-full rounded flex-initial"
+          src="{{ x }}"
+          alt="Sunset in the mountains"
+        />
+      </div>
     </div>
-  </div>
 
   <div class="mt-12 m-auto max-w-3xl text-center">
     "{{bar.description}}"
@@ -88,11 +92,25 @@
 
       </div>
   </div>
+
+  <div class="pt-6 sm:hidden">
+    
+    <div class="grid grid-cols-2 gap-4">
+      <div
+      *ngFor="let x of images"
+      class="overflow-hidden my-2"
+      >
+        <img
+          class="w-full h-full rounded flex-initial"
+          src="{{ x }}"
+          alt="Sunset in the mountains"
+        />
+      </div>
+    </div>
+  </div>
 </div>
   
-<div [ngStyle]="{'position': loading? 'absolute':'initial', 'width.%': '100', 'bottom': '0'}">
   <app-footer></app-footer>
-</div>
   
 
 </div>
