--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -1,29 +1,61 @@
+<div id="barComputer">
+    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check">
+    <label for="check"> 
+        <svg [ngStyle]="{'left.rem': sidebar_left? '13': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
+            <path
+            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />
+        </svg>  
+        <svg [ngStyle]="{'left.rem': !sidebar_left? '1': '12', 'opacity':!sidebar_left? '1': '0', 'pointer-events':!sidebar_left? 'auto': 'none'}" 
+        class="fill-current h-10 w-10 outline-none" id="btn">
+            <path
+            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />
+        </svg> 
+    </label>
+    <div [ngStyle]="{'left.rem': !sidebar_left? '-16' : '0'}" class="sidebar">
+        <header class="text-4xl text-white ">Drinkly</header>
 
-<input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check">
-<label for="check"> 
-    <svg [ngStyle]="{'left.rem': sidebar_left? '13': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
-        <path
-        d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />
-    </svg>  
-    <svg [ngStyle]="{'left.rem': !sidebar_left? '1': '12', 'opacity':!sidebar_left? '1': '0', 'pointer-events':!sidebar_left? 'auto': 'none'}" 
-    class="fill-current h-10 w-10 outline-none" id="btn">
-        <path
-        d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />
-    </svg> 
-</label>
-<div [ngStyle]="{'left.rem': !sidebar_left? '-16' : '0'}" class="sidebar">
-    <header class="text-4xl text-white ">Drinkly</header>
+        <ul>
+            <li><a href="/drinks"><img src="assets/images/coctel.png" class="h-16">Tragos</a></li>
+            <li><a href="/bars" ><img src="assets/images/bar.png" class="h-16">Bares</a></li>
+            <li><a href="/games"><img src="assets/images/game.png" class="h-16">Juegos</a></li>
+            <li><a href="/profile"><img src="assets/images/promotion.png" class="h-16">Promociones</a></li>
+            <li><a href="/post-drink"><img src="assets/images/post.png" class="h-16">Publica</a></li>
+            <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
+            <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
+            <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/user.png" class="h-16">Entrar</a></li>
+        </ul>
 
-    <ul>
-        <li><a href="/drinks"><img src="assets/images/coctel.png" class="h-16">Tragos</a></li>
-        <li><a href="/bars" ><img src="assets/images/bar.png" class="h-16">Bares</a></li>
-        <li><a href="/games"><img src="assets/images/game.png" class="h-16">Juegos</a></li>
-        <li><a href="/profile"><img src="assets/images/promotion.png" class="h-16">Promociones</a></li>
-        <li><a href="/post-drink"><img src="assets/images/post.png" class="h-16">Publica</a></li>
-        <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
-        <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
-        <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/user.png" class="h-16">Entrar</a></li>
-    </ul>
+    </div>
+</div>
+
+<div id="barPhone">
+    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check">
+    <label for="check"> 
+        <svg  [ngStyle]="{'left.%': sidebar_left? '89': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
+            <path
+            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />
+        </svg>  
+        <svg [ngStyle]="{'left.rem': !sidebar_left? '1': '12', 'opacity':!sidebar_left? '1': '0', 'pointer-events':!sidebar_left? 'auto': 'none'}" 
+        class="fill-current h-10 w-10 outline-none" id="btn">
+            <path
+            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />
+        </svg> 
+    </label>
+    <div [ngStyle]="{'left.vw': !sidebar_left? '-100' : '0'}" class="sidebar">
+        <header class="text-4xl text-white ">Drinkly</header>
+
+        <ul>
+            <li><a href="/drinks"><img src="assets/images/coctel.png" class="h-16">Tragos</a></li>
+            <li><a href="/bars" ><img src="assets/images/bar.png" class="h-16">Bares</a></li>
+            <li><a href="/games"><img src="assets/images/game.png" class="h-16">Juegos</a></li>
+            <li><a href="/profile"><img src="assets/images/promotion.png" class="h-16">Promociones</a></li>
+            <li><a href="/post-drink"><img src="assets/images/post.png" class="h-16">Publica</a></li>
+            <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
+            <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
+            <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/user.png" class="h-16">Entrar</a></li>
+        </ul>
+
+    </div>
 
 </div>
 
