--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,38 @@
-
-<div
-  class="h-25 flex items-center bg-gray-200 absolute w-full bottom-0 transition duration-700"
->
-  <div class="flex-initial pr-2 pl-2 sm:pl-32 sm:pr-20 md:pl-32 md:pr-20 ">
-    <img src="assets/images/Drinkly-1.png" alt="drinkly" class="h-20 sm:h-32 md:h-32 w-auto"/>
+  <div 
+   class="h-25 flex items-center absolute bottom-0 z-10 pr-8">
+    <div class=" bottom-0 flex-initial">
+      <img src="assets/images/Drinkly-1.png" alt="drinkly" class="h-20 sm:h-32 md:h-32 w-auto"/>
+    </div>
+  
+    <div style="bottom: 1rem;" class="text-xs sm:text-lg md:text-lg flex-1">
+      <p>drinkly@gmail.com</p>
+      <p>Blah blah</p>
+      <p>Caracas, Venezuela</p>
+    </div>
   </div>
 
-  <div class="pl-5 text-xs sm:text-lg md:text-lg flex-1">
-    <p>drinkly@gmail.com</p>
-    <p>Blah blah</p>
-    <p>Caracas, Venezuela</p>
-  </div>
-</div>
 
-<div class="flex flex-row space-x-10 pr-12 sm:pr-24 mb-6 sm:mb-10 h-8 sm:h-12 absolute bottom-0 right-0">
-  <img
-    src="assets/images/instagram 1.png"
-    alt="insta"
-    class="h-full cursor-pointer"
-  />
-  <img
-    src="assets/images/instagram 1.png"
-    alt="insta"
-    class="h-full cursor-pointer"
-  />
-  <img
-    src="assets/images/instagram 1.png"
-    alt="insta"
-    class="h-full cursor-pointer"
-  />
-</div>
+  
+  
+  <div
+  class="w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0"
+  >
+    <div class="flex flex-row space-x-10 mb-6 mt-6 sm:mt-10 sm:mb-10 h-8 sm:h-12">
+      <img
+        src="assets/images/instagram 1.png"
+        alt="insta"
+        class="h-full cursor-pointer"
+      />
+      <img
+        src="assets/images/instagram 1.png"
+        alt="insta"
+        class="h-full cursor-pointer"
+      />
+      <img
+        src="assets/images/instagram 1.png"
+        alt="insta"
+        class="h-full cursor-pointer"
+      />
+    </div>
+  </div>
+
