ya todo lo del filtro esta hecho

--- a/src/app/components/bars/bars-list/bars-list.component.scss
+++ b/src/app/components/bars/bars-list/bars-list.component.scss
@@ -17,13 +17,13 @@
 /* Medium (md) */
 @media (min-width: 768px) { 
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    width: 90%;
-    gap: 2.5rem;
+    width: 95%;
+    gap: 2rem;
  }
 /* Large (lg) */
-@media (min-width: 1024px) { 
+@media (min-width: 1400px) { 
     
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(4, minmax(0, 1fr));
     width: 75%;
     gap: 2.5rem;
  }
@@ -44,11 +44,14 @@
   /* Medium (md) */
   @media (min-width: 768px) { 
       
+    height: 25rem;
+
    }
   /* Large (lg) */
   @media (min-width: 1024px) { 
       
-      
+    height: 25rem;
+
   }
   
   
