--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -17,7 +17,7 @@
         class="md:w-1/5 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
         type="button"
       >
-        Seleccionar ingredientes
+        Filtrar por ingredientes
       </button>
     </div>     
 
