--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="flex bg-black top-0">
+<div class="flex bg-black fixed top-0 w-full">
   <a href="/bars"
     ><img
       src="assets/images/Drinkly-2.png"
