--- a/src/app/components/test-bar/test-bar.component.scss
+++ b/src/app/components/test-bar/test-bar.component.scss
@@ -105,7 +105,7 @@ label #cancel{
         height: 100%;
         background-color: rgba($color: #000000, $alpha: 0.9);;
         transition: all .5s ease;
-        z-index: 90000;
+        z-index: 19;
 
         header {
             text-align: center;
@@ -138,7 +138,8 @@ label #cancel{
         }
     }
     label{
-        position: absolute;
+        position: fixed;
+        z-index: 20;
     }
     
     #check{
@@ -146,7 +147,7 @@ label #cancel{
     }
     
     label #btn, label #cancel{
-        position: absolute;
+        position: fixed;
         cursor: pointer;
         background-color: black;
         border-radius: 3px;
