--- a/src/app/components/admin/user/list-user/list-user.component.html
+++ b/src/app/components/admin/user/list-user/list-user.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="loading">
     <app-loader></app-loader>
   </div>
-  <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;">
+  <div *ngIf="!loading && !updating" style="font-family: 'Open Sans', sans-serif;">
 
     <div
       class="h-20 w-full flex justify-center items-center"
@@ -69,7 +69,7 @@
                   class="w-2/5 sm:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button"
                 >
-                  Eliminar
+                  Deshabilitar
                 </button>
                 <button
                   (click)="deleteUser(u._id)"
@@ -84,7 +84,7 @@
                   class="w-2/5 sm:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button"
                 >
-                  Recuperar
+                  Habilitar
                 </button>
               </div>
             </div>
@@ -92,6 +92,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div *ngIf="!loading && updating">
+    <app-uploading-loader [text]="'Guardando cambios...'"></app-uploading-loader>
   </div>
   <app-footer></app-footer>
 </div>
