--- a/src/app/components/admin/zone/edit-zone/edit-zone.component.html
+++ b/src/app/components/admin/zone/edit-zone/edit-zone.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="loading">
       <app-loader></app-loader>
   </div>
-  <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;"> 
+  <div *ngIf="!loading && !updating" style="font-family: 'Open Sans', sans-serif;"> 
     <div
       class="h-20 w-full flex justify-center items-center"
       style="font-family: 'Open Sans', sans-serif;"
@@ -68,5 +68,9 @@
       </form>
       </div>
     </div>
-    <app-footer></app-footer>
+ 
+  <div *ngIf="updating">
+      <app-uploading-loader [text]="'Guardando los cambios...'"></app-uploading-loader>
+  </div>
+  <app-footer></app-footer>
   </div>
