--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -4,7 +4,7 @@
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
   <app-admin-header></app-admin-header>
-  
+  <div *ngIf="!updating">
   <div  style="font-family: 'Open Sans', sans-serif;"> 
     <div
       class="h-20 w-full flex justify-center items-center"
@@ -28,7 +28,7 @@
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
               for="inline-full-name"
             >
-              Nombre
+              Nombre de la empresa
             </label>
           </div>
           <div class="md:w-full lg:w-4/5">
@@ -37,7 +37,7 @@
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
               id="inline-full-name"
               type="text"
-              placeholder="Ej. Ron"
+              placeholder="Ej. Empresas Polar"
             />
           </div>
         </div>
@@ -137,5 +137,9 @@
       </form>
       </div>
     </div>
+    </div>
+    <div *ngIf="updating">
+    <app-uploading-loader [text]="'Creando la publicidad...'"></app-uploading-loader>
+  </div>
     <app-footer></app-footer>
   </div>
