--- a/src/app/components/admin/game/edit-game/edit-game.component.html
+++ b/src/app/components/admin/game/edit-game/edit-game.component.html
@@ -6,9 +6,8 @@
   <div *ngIf="loading">
       <app-loader></app-loader>
   </div>
-  <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;">
+  <div *ngIf="!loading && !updating" style="font-family: 'Open Sans', sans-serif;">
     <div
-      *ngIf="!loading"
       class="h-20 w-full flex justify-center items-center"
       style="font-family: 'Open Sans', sans-serif;"
     >
@@ -216,6 +215,10 @@
         </div>
       </form>
     </div>
-    </div>
-    <app-footer></app-footer>
   </div>
+    
+  <div *ngIf="!loading && updating">
+      <app-uploading-loader [text]="'Guardando los cambios...'"></app-uploading-loader>
+  </div>
+  <app-footer></app-footer>
+</div>
