--- a/src/app/components/admin/zone/add-zone/add-zone.component.html
+++ b/src/app/components/admin/zone/add-zone/add-zone.component.html
@@ -3,63 +3,68 @@
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
   <app-admin-header></app-admin-header>
-  <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
-    <div>
-      <h2 class="text-4xl">CREA UNA ZONA</h2>
+  <div *ngIf="!updating">
+    <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
+      <div>
+        <h2 class="text-4xl">CREA UNA ZONA</h2>
+      </div>
+    </div>
+
+    <div class="w-full flex justify-center items-center h-full" style="font-family: 'Open Sans', sans-serif;">
+      <form
+        [formGroup]="form"
+        class="w-2/3 md:w-2/4 content-center"
+        encType="multipart/form-data"
+      >
+      <div class="width-full">
+        <div class="lg:flex lg:items-center mb-6">
+          <div class="md:w-full lg:w-1/5">
+            <label
+              class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
+              for="inline-full-name"
+            >
+              Nombre
+            </label>
+          </div>
+          <div class="md:w-full lg:w-4/5">
+            <input formControlName="name"
+              class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+              id="inline-full-name"
+              type="text"
+              placeholder="Ej. Las Mercedes"
+            />
+          </div>
+        </div>
+        <app-required-field
+                [text]="'Este campo es requerido.'"
+                *ngIf="form.get('name').invalid && form.get('name').touched"
+            ></app-required-field>
+        </div>
+
+        <div class="md:flex md:items-center mb-6">
+          <div class="flex space-x-4 justify-end md:w-full">
+            <button
+              [disabled]="form.invalid"
+              (click)="add()"
+              class="w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              type="button"
+            >
+              Crear
+            </button>
+            <button
+              (click)="goBack()"
+              class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              type="button"
+            >
+              Regresar
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-
-  <div class="w-full flex justify-center items-center h-full" style="font-family: 'Open Sans', sans-serif;">
-    <form
-      [formGroup]="form"
-      class="w-2/3 md:w-2/4 content-center"
-      encType="multipart/form-data"
-    >
-    <div class="width-full">
-      <div class="lg:flex lg:items-center mb-6">
-        <div class="md:w-full lg:w-1/5">
-          <label
-            class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Nombre
-          </label>
-        </div>
-        <div class="md:w-full lg:w-4/5">
-          <input formControlName="name"
-            class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-            id="inline-full-name"
-            type="text"
-            placeholder="Ej. Las Mercedes"
-          />
-        </div>
-      </div>
-      <app-required-field
-              [text]="'Este campo es requerido.'"
-              *ngIf="form.get('name').invalid && form.get('name').touched"
-          ></app-required-field>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="flex space-x-4 justify-end md:w-full">
-          <button
-            [disabled]="form.invalid"
-            (click)="add()"
-            class="w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-            type="button"
-          >
-            Crear
-          </button>
-          <button
-            (click)="goBack()"
-            class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-            type="button"
-          >
-            Regresar
-          </button>
-        </div>
-      </div>
-    </form>
+  <div *ngIf="updating">
+      <app-uploading-loader [text]="'Creando la zona...'"></app-uploading-loader>
   </div>
   <app-footer></app-footer>
 </div>
