arreglos botones cruds & updating-loader

--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -230,7 +230,7 @@
                         <div class="width-2/3 flex items-center justify-center">
                           <img [src]="this.main_image" class="h-24" />
                         </div>
-                        <div class="flex space-x-4 justify-end w-full">
+                        <div class="pt-4 flex space-x-4 justify-center w-full">
                           <button
                             (click)="changeImage(this.main_image)"
                             class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
