--- a/src/app/components/admin/ad/list-ad/list-ad.component.html
+++ b/src/app/components/admin/ad/list-ad/list-ad.component.html
@@ -47,24 +47,24 @@
             </div>
 
             <div class="w-full sm:w-3/5">
-              <div class="flex space-x-2 justify-center sm:justify-end w-full">
+              <div class="text-xl sm:text-lg md:text-xl flex space-x-2 justify-center sm:justify-end w-full">
                 <button (click)="editAd(a._id)"
-                  class="w-2/5 md:w-1/3  shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 lg:w-1/3  shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Editar
                 </button>
                 <button *ngIf="a.available" (click)="inhabilitateAd(a._id)"
-                  class="w-2/5 md:w-1/3  shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 lg:w-1/3  shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Deshabilitar
                 </button>
                 <button (click)="deleteAd(a._id)"
-                  class="hidden w-2/5 md:w-1/3  shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="hidden w-2/5 lg:w-1/3  shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Eliminar
                 </button>
                 <button *ngIf="!a.available" (click)="habilitateAd(a._id)"
-                  class="w-2/5 md:w-1/3  shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 lg:w-1/3  shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Habilitar
                 </button>
