--- a/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
+++ b/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
@@ -99,7 +99,7 @@
             <div class="w-full">
               <label
                 style="font-family: 'Open Sans', sans-serif;"
-                class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+                class="text-lg md:text-xl block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
                 for="inline-full-name"
               >
                 Por favor, esperar a que aparezcan las fotos. Esto indicará que
@@ -141,7 +141,7 @@
                 <div class="width-2/3 flex items-center justify-center">
                   <img [src]="this.main_image" class="h-24" />
                 </div>
-                <div class="pt-4 flex space-x-4 justify-end w-full">
+                <div class="pt-4 flex space-x-4 justify-center w-full">
                   <button
                     (click)="changeImage(this.main_image)"
                     class="w-1/3 sm:w-1/4 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
@@ -154,25 +154,27 @@
             </div>
           </div>
 
-        <div class="md:flex md:items-center mb-6">
-          <div  class="flex space-x-4 justify-end md:w-full">
+        <div class="pt-4 lg:flex lg:items-center mb-6">
+          <div class="flex space-x-4 justify-center md:w-full">
             <button
               [disabled]="form.invalid"
               (click)="addIngredient()"
-              class="text-2xl w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              class="w-2/5 md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
               type="button"
             >
               Crear
             </button>
             <button
               (click)="goBack()"
-              class="text-2xl w-1/3 sm:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              class="w-2/5  md:w-1/4  shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
               type="button"
             >
               Regresar
             </button>
           </div>
         </div>
+
+        
       </form>
       </div>
   </div>
