--- a/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -156,19 +156,19 @@
           </div>
         </div>
 
-        <div class="md:flex md:items-center mb-6">
-          <div  class="flex space-x-4 justify-end md:w-full">
+        <div class="pt-4 lg:flex lg:items-center mb-6">
+          <div class="flex space-x-4 justify-center md:w-full">
             <button
               [disabled]="form.invalid"
               (click)="editIngredient()"
-              class="w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              class="w-2/5 md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
               type="button"
             >
               Guardar
             </button>
             <button
               (click)="goBack()"
-              class="w-1/3 sm:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              class="w-2/5  md:w-1/4  shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
               type="button"
             >
               Regresar
