--- a/src/app/components/admin/user/list-user/list-user.component.html
+++ b/src/app/components/admin/user/list-user/list-user.component.html
@@ -31,65 +31,68 @@
       
     <div>
       <div
-        *ngFor="let u of users"
+        *ngFor="let item of users"
         class="w-full flex justify-center items-center h-full"
       >
-        <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
-          <div class="sm:flex sm:items-center mb-6">
-            <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-left">
-              <label
-                class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
-              >
-                {{ u.f_name }} {{u.l_name}}
-              </label>
-            </div>
-    
-            <div class="w-full sm:w-3/5">
-              <div class="flex space-x-2 justify-center sm:justify-end w-full">
-                <button
-                  *ngIf="u.isAdmin"
-                  (click)="takeAdmin(u._id)"
-                  class="w-2/5 sm:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
+
+      <div class="w-2/3 md:3/4 lg:w-3/5 content-center">
+            <div class="sm:flex sm:items-center mb-6">
+              
+              <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-right">
+                <label
+                  class="block text-black-500 font-bold  mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
                 >
+                {{ item.f_name }} {{item.l_name}}
+                  
+                </label>
+              </div>
+
+              <div class="w-full sm:w-3/5">
+                <div class="text-xl sm:text-lg md:text-xl flex space-x-2 justify-center sm:justify-end w-full">
+                  <button
+                    *ngIf="item.isAdmin"
+                    (click)="takeAdmin(item._id)"
+                    class="w-2/5 lg:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
                     Admin
-                </button>
-                <button
-                *ngIf="!u.isAdmin"
-                (click)="giveAdmin(u._id)"
-                class="w-2/5 sm:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                type="button"
-              >
-                  User
-              </button>
-                <button
-                  *ngIf="u.available"
-                  (click)="inhabilitateUser(u._id)"
-                  class="w-2/5 sm:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
-                >
-                  Deshabilitar
-                </button>
-                <button
-                  (click)="deleteUser(u._id)"
-                  class="hidden w-2/5 sm:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
-                >
-                  Eliminar
-                </button>
-                <button
-                  *ngIf="!u.available"
-                  (click)="habilitateUser(u._id)"
-                  class="w-2/5 sm:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
-                >
-                  Habilitar
-                </button>
+                  </button>
+                  <button
+                    *ngIf="!item.isAdmin"
+                    (click)="giveAdmin(item._id)"
+                    class="w-2/5 lg:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    User
+                  </button>
+                  <button
+                    *ngIf="item.available"
+                    (click)="inhabilitateUser(item._id)"
+                    class="w-2/5 lg:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Deshabilitar
+                  </button>
+                  <button
+                    (click)="deleteUser(item._id)"
+                    class="hidden w-2/5 md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Eliminar
+                  </button>
+                  <button
+                    *ngIf="!item.available"
+                    (click)="habilitateUser(item._id)"
+                    class="w-2/5 lg:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Habilitar
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
       </div>
     </div>
   </div>
