--- a/src/app/components/admin/zone/list-zone/list-zone.component.html
+++ b/src/app/components/admin/zone/list-zone/list-zone.component.html
@@ -42,10 +42,10 @@
           *ngFor="let item of zones"
           class="w-full flex justify-center items-center h-full"
         >
-          <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
+          <div class="w-2/3 md:3/4 lg:w-3/5 content-center">
             <div class="sm:flex sm:items-center mb-6">
               
-              <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-left">
+              <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-right">
                 <label
                   class="block text-black-500 font-bold  mb-1 md:mb-0 pr-4"
                   for="inline-full-name"
@@ -56,10 +56,10 @@
               </div>
 
               <div class="w-full sm:w-3/5">
-                <div class="flex space-x-2 justify-center sm:justify-end w-full">
+                <div class="text-xl sm:text-lg md:text-xl flex space-x-2 justify-center sm:justify-end w-full">
                   <button
                     (click)="edit(item._id)"
-                    class="w-2/5 md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    class="w-2/5 lg:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                     type="button"
                   >
                     Editar
@@ -67,7 +67,7 @@
                   <button
                     *ngIf="item.available"
                     (click)="inhabilitate(item)"
-                    class="w-2/5 md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    class="w-2/5 lg:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                     type="button"
                   >
                     Deshabilitar
@@ -82,7 +82,7 @@
                   <button
                     *ngIf="!item.available"
                     (click)="inhabilitate(item)"
-                    class="w-2/5 md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    class="w-2/5 lg:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                     type="button"
                   >
                     Habilitar
