--- a/src/app/components/drinks/show-filter/show-filter.component.html
+++ b/src/app/components/drinks/show-filter/show-filter.component.html
@@ -80,11 +80,10 @@
                       [style.backgroundImage]="'url('+ item.pictures +')'"
                       (click)="detail(item._id)">
 
-                    <div (click)="detail(item._id)" class="w-10 h-10 rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300">
-                      <div class="  rounded-full ">
-                        <img  class="p-1" src="https://i.ya-webdesign.com/images/5-star-icon-png-5.png" alt="">
-                    </div>
-                  </div>
+                      <button (click)="fav($event, item._id)" 
+                      [ngClass]="is_fav(item._id)? ' rounded-full w-10 h-10 rounded-full  opacity-75 bg-orange-500 m-2 hover:bg-orange-400 transition ease-in duration-300':'rounded-full w-10 h-10 rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300' " >
+                          <img  class="p-1" src="https://i.ya-webdesign.com/images/5-star-icon-png-5.png" alt="">
+                      </button>
                   <!-- CAMBIAR A ORANGE CON CLICK -->
 
               </div>
