--- a/src/app/components/admin/ad/edit-ad/edit-ad.component.html
+++ b/src/app/components/admin/ad/edit-ad/edit-ad.component.html
@@ -118,7 +118,7 @@
           </div>
 
         <div class="md:flex md:items-center mb-6">
-          <div class="flex space-x-4 justify-end md:w-full">
+          <div class="flex space-x-4 justify-center md:w-full">
             <button
               (click)="editAd()"
               class="w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
