--- a/src/app/components/admin/bar/edit-bar/edit-bar.component.html
+++ b/src/app/components/admin/bar/edit-bar/edit-bar.component.html
@@ -193,41 +193,85 @@
                     </label>
                 </div>
 
+                <div class="md:items-center mb-6">
+                    <div class="w-full">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
+                        Números de contacto
+                        </label>
+                    </div>
+                    <div class="w-full">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
+                        Añade los números de teléfono
+                        </label>
+                    </div>
+                </div>
                 
                 <div formArrayName="phone" class="width-full">
                     <div *ngFor="let group of PhoneArray.controls; let i = index;" [formGroupName]="i" class="width-full">
                         <div class="lg:flex lg:items-center mb-6">
-                            <div class="md:w-full lg:w-1/5">
-                                <label class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                                    Número de teléfono
-                                </label>
+                            <div class="w-full lg:w-1/5">
+                            <label
+                                class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
+                                for="inline-full-name"
+                            >
+                                Teléfono
+                            </label>
                             </div>
-                            <div class="md:w-full lg:w-2/5">
-                                <input formControlName="phone" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. 02123451234">
+                            <div class="w-full flex mb-6">
+                            <div class="w-4/5">
+                                <input formControlName="phone" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" type="text" placeholder="Ej. 02123451234">
                             </div>
-                            <div class="pt-4 flex space-x-4 justify-end md:w-full lg:w-2/5">
-                                <button  *ngIf="i<4" (click)="addPhone()" class="w-1/3 sm:w-1/4 lg:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                    +
-                                </button>
-                                <button *ngIf="i!=0" (click)="deletePhone(i)" class="w-1/3 sm:w-1/4 lg:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                    -
+                            <div class="pt-0 flex space-x-4 justify-end  w-1/5">
+                                <button
+                                *ngIf="i != 0"
+                                (click)="deletePhone(i)"
+                                class="w-3/4  shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                                type="button"
+                                >
+                                -
                                 </button>
                             </div>
                         </div>
-                        <app-required-field *ngIf="group.controls.phone.invalid && group.controls.phone.touched" [text]="'Este campo es requerido.'"></app-required-field>
+                    </div>
+                    <app-required-field *ngIf="group.controls.phone.invalid && group.controls.phone.touched" [text]="'Este campo es requerido.'"></app-required-field>
                     </div> 
+                    <div class="pt-0 pb-4 flex space-x-4 justify-center md:w-full">
+                        <button
+                        (click)="addPhone()"
+                        class="md:w-1/4 w-1/2 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        type="button"
+                        >
+                        Añadir otro
+                        </button>
+                    </div>
                 </div>
 
-                <div class="lg:flex lg:items-center mb-6">
-                    <div class="md:w-full">
-                    <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
+                <div class="pt-4 md:items-center mb-6">
+                    <div class="w-full">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
                         Menú
-                    </label>
+                        </label>
                     </div>
-                    <div class="md:w-full">
-                    <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
-                        Tragos disponibles en el bar
-                    </label>
+                    <div class="w-full">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
+                        Añade los tragos disponibles en el bar
+                        </label>
                     </div>
                 </div>
 
@@ -271,31 +315,45 @@
                         <div class="lg:flex lg:items-center mb-6">
                             <div class="md:w-1/3"></div>
                             <div class="flex space-x-4 justify-end w-full">
-                                <button  (click)="addMenu()" class="w-1/3 sm:w-1/4  shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                    +
-                                </button>
                                 <button (click)="deleteMenu(i)" *ngIf="i>0" class="w-1/3 sm:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                                     -
                                 </button>
                             </div>
                         </div>
                     </div> 
+                    <div class="pt-0 pb-4 flex space-x-4 justify-center md:w-full">
+                        <button
+                        (click)="addMenu()"
+                        class="md:w-1/4 w-1/2 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        type="button"
+                        >
+                        Añadir otro
+                        </button>
+                    </div>
                 </div>
 
-
-
-                <div class="mb-6">
+                <div class="pt-4 md:items-center mb-6">
                     <div class="w-full">
-                    <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
                         Galería
-                    </label>
+                        </label>
                     </div>
                     <div class="w-full">
-                    <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
+                        <label
+                        style="font-family: 'Open Sans', sans-serif;"
+                        class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                        >
                         Por favor, esperar a que aparezcan las fotos. Esto indicará que fueron cargadas con éxito.
-                    </label>
+                        </label>
                     </div>
                 </div>
+
+
 
                 <div class="lg:flex lg:items-center mb-6">
                     <div class="md:w-full lg:w-1/5">
@@ -317,7 +375,7 @@
                             <div class="width-2/3 flex items-center justify-center">
                                 <img [src]="this.main_image" class="h-24">
                             </div>
-                            <div class="pt-4 flex space-x-4 justify-end w-full">
+                            <div class="pt-4 flex space-x-4 justify-center w-full">
                                 <button  (click)="changeImage(this.main_image)" class="w-1/3 sm:w-1/4 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                                     Cambiar
                                 </button>
@@ -353,11 +411,8 @@
                                     </div>
                                 </div>
 
-                                <div class="pt-4 flex space-x-4 justify-end w-full">
-                                    <button  *ngIf="i<6" (click)="addPhoto()" class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                        +
-                                    </button>
-                                    <button (click)="deletePhoto(group, i)" class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                                <div class="pt-4 flex space-x-4 justify-center w-full">
+                                    <button (click)="deletePhoto(group, i)" class="sm:w-1/4 w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                                         -
                                     </button>
                                 </div>
@@ -366,11 +421,20 @@
                         </div>
                         
                     </div> 
+                    <div class="pt-0 pb-4 flex space-x-4 justify-center md:w-full">
+                        <button
+                        (click)="addPhoto()"
+                        class="md:w-1/4 w-1/2 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        type="button"
+                        >
+                        Añadir otra
+                        </button>
+                    </div>
                 </div>
                 
             
                 <div class="md:flex md:items-center mb-6">
-                    <div class="flex space-x-4 justify-end md:w-full">
+                    <div class="flex space-x-4 justify-center md:w-full">
                         <button   [disabled]="form.invalid" (click)="update()" class="w-1/3 sm:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                             Guardar
                         </button>
